--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "Transliterate The Web",
-  "description": "This extension attempts to transliterate all English text to the shavian Alphabet",
-  "version": "0.0.1",
+  "name": "Hello Extensions",
+  "description": "Base Level Extension",
+  "version": "1.0",
   "manifest_version": 3,
   "action": {
-    "default_popup": "../src/popup/pupup.html",
-    "default_icon": "../public/icon-128.png"
+    "default_popup": "popup.html",
+    "default_icon": "icon-128.png"
   }
 }
