--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,16 @@
 {
-  "name": "Hello Extensions",
-  "description": "Base Level Extension",
-  "version": "1.0",
+  "name": "Repleace text extension",
+  "description": "An extension that repleaces text",
+  "version": "0.0.1",
   "manifest_version": 3,
+  "permissions": ["<all_urls>"],
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
+      "run_at": "document_idle"
+    }
+  ],
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon-128.png"
