--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "node": "^22.16.0"
+    "node": "^22.16.0",
+    "to-shavian": "^0.3.1"
   }
 }
