--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,22 @@
 {
   "name": "Transliterate to Shavian",
-  "description": "This extension will transliterate all english to Shavian",
+  "description": "This extension will transliterate all English text to Shavian",
   "version": "0.0.1",
   "manifest_version": 3,
-  "permissions": ["<all_urls>"],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon-16.png",
+      "48": "icons/icon-48.png",
+      "128": "icons/icon-128.png"
+    }
+  },
+  "permissions": ["<all_urls>", "storage", "activeTab"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
       "js": ["content.js"],
       "run_at": "document_idle"
     }
-  ],
-  "action": {
-    "default_popup": "popup.html",
-    "default_icon": "icon-128.png"
-  }
+  ]
 }
