--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "build:dist": "bun run scripts/build.ts",
     "increment-version": "bun run scripts/version.ts",
-    "convert-dict": "bun run scripts/convert-dict.js"
+    "convert-dict": "bun run scripts/convert-dict.js",
+    "test": "bun run tests/test-refactored.ts",
+    "test:all": "for f in tests/*.ts; do echo \"Running $f\"; bun run \"$f\"; done",
+    "clean": "rm -rf dist/ temp/ *.tmp temp_* *_backup *.backup"
   },
   "devDependencies": {
     "@types/bun": "latest",
