--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 .DS_Store
 
 # Other
-"dechifro's-engine"
+readlexicon-dictionaries
 
 # Temporary files
 temp/
