--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "build:dist": "bun run scripts/build.ts",
     "increment-version": "bun run scripts/version.ts",
-    "convert-dict": "bun run scripts/convert-dict.js",
     "test": "bun test",
     "test:watch": "bun test --watch",
     "test:coverage": "bun test --coverage",
@@ -23,7 +22,6 @@
   },
   "dependencies": {
     "compromise": "^14.14.4",
-    "node": "^22.16.0",
-    "to-shavian": "^0.3.1"
+    "node": "^22.16.0"
   }
 }
