Many changes, README Updated, Tests have been deleted cause I'll work on more later, I've added a code formater to help out on avoiding making a mess, I've also modified some of the scripts

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release CI
 on:
   push:
     tags:
-      - "v*.*.*" # This workflow will run whenever a tag starting with 'v' (e.g., v0.0.1) is pushed.
+      - 'v*.*.*' # This workflow will run whenever a tag starting with 'v' (e.g., v0.0.1) is pushed.
 
 jobs:
   build_and_release:
