--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,19 +11,11 @@
       "128": "icons/icon-128.png"
     }
   },
-  "permissions": [
-    "<all_urls>",
-    "storage",
-    "activeTab"
-  ],
+  "permissions": ["<all_urls>", "storage", "activeTab"],
   "content_scripts": [
     {
-      "matches": [
-        "<all_urls>"
-      ],
-      "js": [
-        "content.js"
-      ],
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
       "run_at": "document_idle"
     }
   ]
