--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "prettier": "^3.5.3"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "compromise": "^14.14.4",
     "node": "^22.16.0",
+    "ts-node": "^10.9.2",
     "wordpos": "^2.1.0"
   }
 }
