--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Transliterate to Shavian",
   "description": "This extension will transliterate all English text to Shavian",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "manifest_version": 3,
   "action": {
     "default_popup": "popup.html",
@@ -11,11 +11,18 @@
       "128": "icons/icon-128.png"
     }
   },
-  "permissions": ["storage", "activeTab"],
+  "permissions": [
+    "storage",
+    "activeTab"
+  ],
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"],
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "content.js"
+      ],
       "run_at": "document_idle"
     }
   ]
